odd/even/selected does not work with css fallback mechanism -also added suport for table headder color fallback mechanism Case: SVY-2694